--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-dropzone": "^11.4.2"
+    "react-dropzone": "^11.4.2",
+    "react-material-ui-carousel": "^3.2.0"
   },
   "devDependencies": {
     "eslint": "8.4.0",
