--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "formik": "^2.2.9",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-dropzone": "^11.4.2",
-    "react-material-ui-carousel": "^3.2.0"
+    "react-material-ui-carousel": "^3.2.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "eslint": "8.4.0",
