--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
   "devDependencies": {
     "eslint": "8.4.0",
     "eslint-config-next": "12.0.7"
+  },
+  "optionalDependencies": {
+    "mongodb": "^3.7.3"
   }
 }
