--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "eslint": "8.4.0",
+    "eslint": "^8.10.0",
     "eslint-config-next": "12.0.7"
   },
   "optionalDependencies": {
